--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -2,6 +2,9 @@
 	<div class="col-sm-6 col-md-4 col-md-offset-4 col-sm-offser-3">
 		<h1>Checkout</h1>
 		<h4>Your total: ${{total}}</h4>
+		<div id="charge-error" class="alert alert-danger hidden">
+			
+		</div>
 		<form action="/checkout" method="post" id="checkout-form">
 			<div class="row">
 				<div class="col-xs-12">
@@ -55,3 +58,5 @@
 		</form>
 	</div>
 </div>
+<script src="https://js.stripe.com/v2/"></script>
+<script src="javascripts/checkout.js"></script>
